# PrisonGame

./: .gitignore  .gitmodules  CMakeLists.txt  GamePersonalities.project  HardTime2.sln  HardTime2.uproject  Hardtime_split.workspace  Makefile  README.md  design_notes.txt  license.txt  steps_to_produce_project_files.txt
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
GamePersonalities/: Actions.cpp  Actions.hpp  BasicAI.cpp  BasicAI.hpp  Constants.cpp  Constants.hpp  Design.txt  Evaluate.cpp  Evaluate.hpp  HTN.cpp  HTN.hpp  HTNDomain.cpp  HTNDomain.hpp  HTNPrimitives.cpp  HTNPrimitives.hpp  HTNWorldState.cpp  HTNWorldState.hpp  Item.cpp  Item.hpp  Locations.cpp  Locations.hpp  Missions.cpp  Missions.hpp  Player.cpp  Player.hpp  RequestHTNDomain.cpp  RequestHTNDomain.hpp  Stats.cpp  Stats.hpp  World.cpp  World.hpp  main.cpp
Source/: HardTime2.Target.cs  HardTime2Editor.Target.cs
Source/HardTime2/: External_includes.cpp  HardTime2.Build.cs  HardTime2.cpp  HardTime2Character.cpp  HardTime2Character.h  HardTime2GameMode.cpp  HardTime2GameMode.h
Source/HardTime2/Private/: AICharacterC.cpp  AbstractAction.cpp  AbstractItem.cpp  Actions.cpp  ActorItem.cpp  BasicAI.cpp  Constants.cpp  HTNDomain.cpp  HTNPlanner.cpp  HTNPrimitives.cpp  HTNWorldState.cpp  Locations.cpp  Missions.cpp  Names.cpp  PStats.cpp  PlatformSpecific.cpp  Player.cpp  PlayerData.cpp  PlayerRegistry.cpp  Relationship.cpp  RequestHTNDomain.cpp  SimWorld.cpp  TranslateToHTNWorldState.cpp  World.cpp  pLog.cpp
Source/HardTime2/Public/: AICharacterC.h  AbstractAction.h  AbstractItem.h  Actions.h  Actions.hpp  ActorItem.h  ActorItem.hpp  BasicAI.h  BasicAI.hpp  Constants.h  Constants.hpp  EActions.h  EMissions.h  HTNDomain.h  HTNDomain.hpp  HTNPlanner.h  HTNPlanner.hpp  HTNPrimitives.h  HTNPrimitives.hpp  HTNWorldState.h  HTNWorldState.hpp  Locations.h  Locations.hpp  Missions.h  Missions.hpp  PStats.h  PStats.hpp  PlatformSpecific.h  PlatformSpecific.hpp  Player.hpp  PlayerData.h  PlayerMap.hpp  PlayerMapFwd.hpp  PlayerRegistry.h  PlayerRegistry.hpp  RelMap.h  RelMap.hpp  RelMapFwd.hpp  Relationship.h  RequestHTNDomain.h  (+5 more)
Source/hardtime_textworld/: CMakeLists.txt  hardtime_textworld.project  hardtime_textworld.txt
Source/hardtime_textworld/Private/: AbstractItem.cpp  Actions.cpp  Constants.cpp  HTNDomain.cpp  HTNPrimitives.cpp  HTNWorldState.cpp  Locations.cpp  Missions.cpp  PStats.cpp  PlatformSpecific.cpp  PlayerData.cpp  PlayerRegistry.cpp  RequestHTNDomain.cpp  SimWorld.cpp  main.cpp  pLog.cpp
Source/hardtime_textworld/Public/: AbstractItem.h  Actions.h  BasicAI.h  Constants.h  EActions.h  EItemType.h  ELocations.h  HTNDomain.h  HTNPlanner.h  HTNPrimitives.h  HTNWorldState.h  Locations.h  Names.h  PStats.h  PlatformSpecific.h  PlayerData.h  Relationship.h  RequestHTNDomain.h  SimWorld.h
Source/hardtime_textworld/Source/Private/: AbstractAction.cpp  Actions.cpp  BasicAI.cpp  HTNDomain.cpp  HTNPrimitives.cpp  HTNWorldState.cpp  Missions.cpp  Names.cpp  PlayerData.cpp  PlayerRegistry.cpp  Relationship.cpp  RequestHTNDomain.cpp  SimWorld.cpp  TranslateToHTNWorldState.cpp  main.cpp
Source/hardtime_textworld/Source/Public/: Actions.h  BasicAI.h  HTNDomain.h  HTNPrimitives.h  Item.h  Missions.h  PlatformSpecific.h  PlayerData.h  PlayerRegistry.h  RequestHTNDomain.h  SimWorld.h  TranslateToHTNWorldState.h  pLog.h
Source/hardtime_textworld/Source/tests/: tests.cpp
Source/hardtime_textworld/tests/: tests.cpp
Source/imports/: AbstractAction.h  AbstractItem.h  AbstractMission.h  AbstractPlayerData.h  Constants.h  HTNPlanner.h  HTNWorldState.h  PlatformSpecific.h
